# Agent-Span

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-hooks.yaml  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  KNOWN_ISSUES.md  LICENSE  README.md  SECURITY.md  deny.toml  docker-compose.yml  justfile
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: index.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  docker.yml  docs.yml  load.yml  python-publish.yml  release.yml  sdk-publish.yml  sdks.yml
crates/agentspan-api/: Cargo.toml
crates/agentspan-api/src/: lib.rs  main.rs  memory.rs  metrics.rs  middleware.rs  observe.rs
crates/agentspan-api/src/routes/: auth.rs  batch.rs  channels.rs  doctor.rs  events.rs  health.rs  memory.rs  metrics.rs  mod.rs  openapi.rs  read.rs  search.rs  v1.rs  websocket.rs
crates/agentspan-auth/: Cargo.toml
crates/agentspan-auth/src/: adaptive_rate.rs  audit.rs  key.rs  lib.rs  rate_limit.rs  tenant.rs
crates/agentspan-cache/: Cargo.toml
crates/agentspan-cache/src/: disk.rs  distributed.rs  key.rs  lib.rs  manager.rs  memory.rs  optimizer.rs  singleflight.rs
crates/agentspan-channels/: Cargo.toml
crates/agentspan-channels/src/: anthropic.rs  arxiv.rs  bilibili.rs  bing.rs  brave.rs  budget.rs  coinbase.rs  crates_io.rs  devto.rs  discord.rs  dockerhub.rs  duckduckgo.rs  exa_search.rs  extract.rs  federated.rs  fingerprint.rs  flight.rs  format.rs  github.rs  gitlab.rs  gnews.rs  google.rs  gutenberg.rs  hackernews.rs  http.rs  huggingface.rs  instagram.rs  intelligence.rs  lib.rs  linkedin.rs  lobsters.rs  maps.rs  notion.rs  npm.rs  openai.rs  opencli.rs  openlibrary.rs  pinterest.rs  podcast_index.rs  pypi.rs  (+24 more)
crates/agentspan-channels/src/healer/: alerts.rs  discoverer.rs  mod.rs  monitor.rs  repair.rs  switcher.rs
crates/agentspan-cli/: Cargo.toml
crates/agentspan-cli/src/: cookies.rs  env_detect.rs  main.rs  style.rs
crates/agentspan-cli/src/commands/: benchmark.rs  check_update.rs  completions.rs  config.rs  doctor.rs  format.rs  install.rs  loadtest.rs  mcp.rs  mod.rs  plugin.rs  serve.rs  setup.rs  skill.rs  transcribe.rs  tunnel.rs  uninstall.rs  validate.rs  version.rs  watch.rs
crates/agentspan-core/: Cargo.toml
crates/agentspan-core/src/: analytics.rs  auth.rs  backend.rs  cache.rs  channel.rs  config.rs  error.rs  lib.rs  probe.rs  profiler.rs  types.rs
crates/agentspan-mcp/: Cargo.toml
crates/agentspan-mcp/src/: http.rs  lib.rs  main.rs  server.rs  tools.rs
crates/agentspan-probe/: Cargo.toml
crates/agentspan-probe/src/: lib.rs  probe.rs
crates/agentspan-router/: Cargo.toml
crates/agentspan-router/src/: adaptive.rs  circuit_breaker.rs  health.rs  lib.rs  monitor.rs  retry.rs  router.rs
docs/: README_ja.md  README_ko.md  README_zh.md  api-reference.md  book.toml  cookie-export.md  install.md  llms.txt  troubleshooting.md  update.md  why-agentspan.md
docs/guides/: setup-discord.md  setup-exa.md  setup-groq.md  setup-podcasts.md  setup-reddit.md  setup-scholar.md  setup-spotify.md  setup-telegram.md  setup-twitch.md  setup-twitter.md  setup-xiaohongshu.md  use-with-claude-code.md  use-with-cursor.md  use-with-windsurf.md
docs/src/: SUMMARY.md  api-reference.md  architecture.md  channels.md  configuration.md  deployment.md  getting-started.md  introduction.md  mcp.md  sdks.md  troubleshooting.md
examples/: README.md
examples/curl/: quickstart.sh
examples/javascript/: quickstart.mjs
examples/python/: auth_flow.py  batch_read.py  federated_search.py
examples/rust/: quickstart.rs
integrations/: README.md
integrations/github-action/: README.md  action.yml
integrations/jetbrains/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
integrations/mcp-clients/: README.md  cline.json  http-remote.json
integrations/nvim/: README.md
integrations/nvim/plugin/: agentspan.lua
integrations/pre-commit/: README.md  check-links.sh
integrations/vscode/: .vscodeignore  README.md  package.json  tsconfig.json
integrations/vscode/src/: api.ts  extension.ts
plugins/: registry.json
scripts/: build.sh  release.sh  setup-dev.sh  test-all.sh  test.sh
scripts/grafana/dashboards/: agentspan.json
scripts/prometheus/: prometheus.yml
sdk/: README.md
sdk/csharp/: README.md
sdk/csharp/src/: AgentSpan.csproj  AgentSpanClient.cs
sdk/csharp/tests/: AgentSpan.Tests.csproj  ClientTests.cs
sdk/go/: README.md  agentspan.go  agentspan_test.go  go.mod
sdk/java/: README.md  pom.xml
sdk/js/: README.md  index.d.ts  package.json
sdk/js/src/: index.js
sdk/js/test/: client.test.js
sdk/php/: README.md  composer.json  phpunit.xml
sdk/php/src/: Client.php  Exceptions.php
sdk/php/tests/: ClientTest.php
sdk/python/: README.md  pyproject.toml
sdk/python/agentspan/: __init__.py  client.py  exceptions.py  models.py
sdk/python/tests/: test_client.py
sdk/ruby/: README.md  Rakefile  agentspan.gemspec
sdk/ruby/lib/: agentspan.rb
sdk/ruby/test/: test_agentspan.rb
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: lib.rs
sdk/swift/: Package.swift  README.md
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/tests/: auth_flow.rs  channels_doctor_read.rs  health.rs
tests/integration/tests/common/: mod.rs
tests/load/: BASELINE.md  README.md  k6_smoke.js
web/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.js  vite.config.ts
web/src/: App.tsx
web/src/components/: BlinkingBlock.tsx  ChannelProfile.tsx  Chrome.tsx  GatewayOrb.tsx  HeroDistortion.tsx  Logo.tsx  Nav.tsx  PillCTA.tsx  Preloader.tsx  WaveWordmark.tsx
web/src/dashboard/: DashStat.tsx  Dashboard.tsx  useCountUp.ts
web/src/data/: brandIcons.ts  content.ts  customGlyphs.ts  realData.ts
web/src/sections/: Architecture.tsx  Channels.tsx  Features.tsx  Footer.tsx  Hero.tsx  MarketingSite.tsx  Network.tsx  (+1 more)
(+27 files in other folders)
