[package]
name = "agentspan-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Multi-tier caching for AgentSpan (L1 memory / L2 disk / L3 distributed)."

[features]
default = []
# Enable a real Redis-backed L3 distributed cache (otherwise L3 is a no-op stub).
redis = ["dep:redis"]

[dependencies]
agentspan-core = { path = "../agentspan-core" }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
redis = { version = "0.27", features = ["tokio-comp"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3"
