[package]
name = "agentspan-channels"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "AgentSpan channel implementations (Web, GitHub, RSS, etc.)."

[dependencies]
agentspan-core = { path = "../agentspan-core" }
agentspan-probe = { path = "../agentspan-probe" }
agentspan-router = { path = "../agentspan-router" }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
rss = { workspace = true }
sha1 = { workspace = true }
base64 = { workspace = true }
tempfile = "3"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
wiremock = "0.6"
