[package]
name = "agentspan-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "agentspan"
path = "src/main.rs"

[dependencies]
agentspan-core = { path = "../agentspan-core" }
agentspan-channels = { path = "../agentspan-channels" }
agentspan-api = { path = "../agentspan-api" }
agentspan-router = { path = "../agentspan-router" }
agentspan-probe = { path = "../agentspan-probe" }
agentspan-cache = { path = "../agentspan-cache" }
agentspan-mcp = { path = "../agentspan-mcp" }
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3"
