[package]
name = "agentspan-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core traits, types, errors, and configuration for AgentSpan."

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
figment = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
utoipa = { version = "5", optional = true }

[features]
default = []
schema = ["dep:utoipa"]

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3"
