[package]
name = "agentspan-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "agentspan_mcp"
path = "src/lib.rs"

[[bin]]
name = "agentspan-mcp"
path = "src/main.rs"

[features]
default = []
http = ["dep:axum", "dep:tokio-stream"]

[dependencies]
agentspan-core = { path = "../agentspan-core" }
agentspan-channels = { path = "../agentspan-channels" }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true, optional = true }
tokio-stream = { version = "0.1", optional = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
