[package]
name = "agentspan-probe"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Real command probe engine for AgentSpan backends."

[dependencies]
agentspan-core = { path = "../agentspan-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
regex-lite = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
