[package]
name = "agentspan-router"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Multi-backend routing engine with health checks and retries."

[dependencies]
agentspan-core = { path = "../agentspan-core" }
agentspan-probe = { path = "../agentspan-probe" }
agentspan-cache = { path = "../agentspan-cache" }
async-trait = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
