[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentspan"
version = "0.4.0"
description = "Async Python client for the AgentSpan API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "AgentSpan Contributors" }]
keywords = ["agentspan", "llm", "agent", "scraping", "api-client"]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.13.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/oxbshw/Agent-Span"
Repository = "https://github.com/oxbshw/Agent-Span"

[tool.hatch.build.targets.wheel]
packages = ["agentspan"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
